--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <body>
-    <h1>This is my website</h1>
+    <h1> Emmanuel's Website </h1>
+    <p> Welcome to my website! </p>
   </body>
 </html>
