--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   <body>
     <h1>Emmanuel's Website</h1>
     <p>Welcome to my website!</p>
+    <p>This website is a work in progress</p>
   </body>
 </html>
