--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 
 <html>
+  <style>
+    body {
+      background-color: red;
+    }
+    h1 {
+      color: white;
+    }
+  </style>
+  <title>CSE 322 Website</title>
   <body>
     <h1>Emmanuel's Website</h1>
     <p>Welcome to my website!</p>
