--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <html>
   <style>
     body {
-      background-color: red;
+      background-color: blue;
     }
     h1 {
       color: white;
       text-align: center;
     }
+    p {
+      color: red;
+      text-align: left;
   </style>
   <title>CSE 322 Website</title>
   <body>
     <h1>Emmanuel's Website</h1>
-    <p>Welcome to my website!</p>
-    <p>This website is a work in progress</p>
+    <p>Welcome to my website! <br> 
+      This website is currently a work in progress</p>
+    <img src = "wip.jpg" alt = "Work in Progress">
   </body>
 </html>
