--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <h1>Emmanuel's Website</h1>
     <p>Welcome to my website! <br> 
       This website is currently a work in progress</p>
-    <img src = "wip.jpg" alt = "Work in Progress">
+    <img src = "wip.jpg" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
 </html>
