--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       color: white;
       text-align: center;
     }
+    h2 {
+      color: white;
+      text-align: left;
     p {
       color: red;
       text-align: left;
@@ -16,9 +19,9 @@
   </style>
   <title>CSE 322 Website</title>
   <body>
-    <h1>Emmanuel's Website</h1>
-    <p>Welcome to my website! <br> 
-      This website is currently a work in progress</p>
+    <h1>Jump Man Game</h1>
+    <h2>Welcome to my website!</h2>
+    <p>This website is currently a work in progress</p>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
 </html>
