--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
     h2 {
       color: white;
-      text-align: left;
+      text-align: center;
     p {
       color: red;
       text-align: left;
@@ -19,8 +19,8 @@
   </style>
   <title>CSE 322 Website</title>
   <body>
-    <h1>Jump Man Game</h1>
-    <h2>Welcome to my website!</h2>
+    <h1>Welcome to my Website!</h1>
+    <h2>Make a selection</h2>
     <p>This website is currently a work in progress</p>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
