--- a/index.html
+++ b/index.html
@@ -2,26 +2,18 @@
 
 <html>
   <style>
-    body {
-      background-color: blue;
-    }
-    h1 {
-      color: white;
-      text-align: center;
-    }
-    h2 {
-      color: white;
-      text-align: center;
-    p {
-      color: red;
-      text-align: left;
-    }
+    body {background-color: blue;}
+    h1 {color: white; text-align: center;}
+    h2 {color: white; text-align: center;}
+    p {color: red; text-align: left;}
+    div {background-color: lightgrey; border: 15px red; width: 300px; padding: 50px; margin: 10px;}
   </style>
   <title>CSE 322 Website</title>
   <body>
     <h1>Welcome to my Website!</h1>
     <h2>Make a selection</h2>
     <p>This website is currently a work in progress</p>
+    <div>A Very Simple Calculator</div>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
 </html>
