--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     h1 {color: white; text-align: center;}
     h2 {color: white; text-align: center;}
     p {color: red; text-align: left;}
-    div {background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px;}
+    div {background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
   <body>
