--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     h1 {color: white; text-align: center;}
     h2 {color: white; text-align: center;}
     p {color: red; text-align: left;}
-    div {background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
+    div {background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px;}
   </style>
   <title>CSE 322 Website</title>
   <body>
     <h1>Welcome to my Website!</h1>
     <h2>Make a selection</h2>
     <p>This website is currently a work in progress</p>
-    <div>A Very Simple Calculator</div>
+    <div>A Very Simple Calculator: A Tale of Dudes and Souls Eternally Retold</div>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
 </html>
