--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Welcome to my Website!</h1>
     <h2>Make a selection</h2>
     <p>This website is currently a work in progress</p>
-    <div>A Very Simple Calculator: A Tale of Dudes and Souls Eternally Retold</div>
+    <div>A Very Simple Calculator</div>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
 </html>
