--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h1>Welcome to my Website!</h1>
     <h2>Make a selection</h2>
     <p>This website is currently a work in progress</p>
-    <div>A Very Simple Calculator </div>
+    <div>
+      <li><a href: "Calculator.html">A Very Simple Calculator</a></li> 
+    </div>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
 </html>
