--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Make a selection</h2>
     <p>This website is currently a work in progress </p>
     <div>
-      <a href: "Calculator.html">A Very Simple Calculator</a>
+      <a href= "Calculator.html">A Very Simple Calculator</a>
     </div>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
