--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     h1 {color: white; text-align: center;}
     h2 {color: white; text-align: center;}
     p {color: red; text-align: left;}
-    div {background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
+    div.calc {background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
+    div.game {position: relative; left: 50px; background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
   <body>
     <h1>Welcome to my Website!</h1>
     <h2>Make a selection</h2>
     <p>This website is currently a work in progress </p>
-    <div>
+    <div id= "calc">
       <a href= "Calculator.html">A Very Simple Calculator</a>
+    </div>
+    <div id= "game">
+      <a href= "Game.html">A Very Simple Game</a>
     </div>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
   </body>
