--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <h1>Welcome to my Website!</h1>
     <h2>Make a selection</h2>
     <p>This website is currently a work in progress </p>
-    <div id= "calc">
+    <div class= "calc">
       <a href= "Calculator.html">A Very Simple Calculator</a>
     </div>
-    <div id= "game">
+    <div class= "game">
       <a href= "Game.html">A Very Simple Game</a>
     </div>
     <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
