--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     h1 {color: white; text-align: center;}
     h2 {color: white; text-align: center;}
     p {color: red; text-align: left;}
-    div.calc {background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
-    div.game {position: relative; left: 50px; background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
+    div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
+    div.game {float: right; background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
   <body>
