--- a/Image.html
+++ b/Image.html
@@ -4,6 +4,7 @@
 <style>
   h1 (text-align: center; text-color: lightblue;}
 </style>
+  <title>Favorite Games</title>
   <body>
     <h1>My Favorite Games Of All Time</h1>
   </body>
