--- a/Image.html
+++ b/Image.html
@@ -2,7 +2,8 @@
 
 <html>
 <style>
-  h1 (text-align: center; text-color: lightblue;}
+  body {background-color: black;}
+  h1 {text-align: center; text-color: lightblue;}
 </style>
   <title>Favorite Games</title>
   <body>
