--- a/Image.html
+++ b/Image.html
@@ -3,7 +3,7 @@
 <html>
 <style>
   body {background-color: black;}
-  h1 {text-align: center; text-color: lightblue;}
+  h1 {color: lightblue; text-align: center;}
 </style>
   <title>Favorite Games</title>
   <body>
