--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     h1 {color: white; text-align: center;}
     h2 {color: white; text-align: center;}
     p {color: red; text-align: left;}
-    div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
-    div.game {float: right; background-color: lightgrey; width: 300px; border: 15px solid red; padding: 50px; margin: 10px; text-align: center;}
+    div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
+      padding: 50px; margin: 10px; text-align: center;}
+    div.game {float: right; background-color: lightgrey; width: 300px; border: 15px solid red; 
+      padding: 50px; margin: 10px; text-align: center;}
+    div.image {float: center; background-color: lightgrey; width 300px; border: 15px solid red; 
+      padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
   <body>
@@ -16,6 +20,9 @@
     <p>This website is currently a work in progress </p>
     <div class= "calc">
       <a href= "Calculator.html">A Very Simple Calculator</a>
+    </div>
+    <div class= "image">
+      <a href= "Image.html">My Favorite Games</a>
     </div>
     <div class= "game">
       <a href= "Game.html">A Very Simple Game</a>
