--- a/Image.html
+++ b/Image.html
@@ -4,9 +4,11 @@
   <style>
     body {background-color: black;}
     h1 {color: lightblue; text-align: center;}
+    h2 {color: red; text-aligh: left;}
   </style>
   <title>Favorite Games</title>
   <body>
     <h1>My Favorite Games Of All Time</h1>
+    <h2><a href= "index.html">Back to Main Page</a>
   </body>
 </html>
