--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
       padding: 50px; margin: 10px; text-align: center;}
     div.game {background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
-    div.image {background-color: lightgrey; width 300px; border: 15px solid red; 
+    div.image {background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
   <body>
     <h1>Welcome to my Website!</h1>
     <h2>Make a selection</h2>
-    <div class= "calc">
-      <a href= "Calculator.html">A Very Simple Calculator</a>
+    <div class="calc">
+      <a href="Calculator.html">A Very Simple Calculator</a>
     </div>
-    <div class= "game">
+    <div class="game">
       <a href= "Game.html">A Very Simple Game</a>
     </div>
-    <div class= "image">
-      <a href= "Image.html">My Favorite Games</a>
+    <div class="image">
+      <a href="Image.html">My Favorite Games</a>
     </div>
     <p>This website is currently a work in progress </p>
-    <img src = "Workip.png" alt = "Work in Progress" width = "500" heigh = "500">
+    <img src="Workip.png" alt="Work in Progress" width="500" height="500">
   </body>
 </html>
