--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     h1 {color: white; text-align: center;}
     h2 {color: white; text-align: center;}
     p {color: red; text-align: left;}
-    div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.calc {position: relative; left: 30px; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
-    div.game {float: right; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.game {position: relative; right: 30px; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
-    div.image {background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.image {position: relative; center: 30px; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
@@ -26,7 +26,7 @@
     <div class="image">
       <a href="Image.html">My Favorite Games</a>
     </div>
-    <p>This website is currently a work in progress </p>
+    <p><b>This website is currently a work in progress</b></p>
     <img src="Workip.png" alt="Work in Progress" width="500" height="500">
   </body>
 </html>
