--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     h1 {color: white; text-align: center;}
     h2 {color: white; text-align: center;}
     p {color: red; text-align: left;}
-    div.calc {position: relative; left: 30px; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
-    div.game {position: relative; right: 30px; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.game {float: right; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
-    div.image {position: relative; center: 30px; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.image {background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
@@ -23,6 +23,7 @@
     <div class="game">
       <a href= "Game.html">A Very Simple Game</a>
     </div>
+    <p></p>
     <div class="image">
       <a href="Image.html">My Favorite Games</a>
     </div>
