--- a/Calculator.html
+++ b/Calculator.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 
 <html>
+  <style>
+    body {background-color: grey;}
+    h1 {color: lightblue; text-align: center;}
+    h2 {color: blue; text-align: left;}
+    h3 {color: lightblue; text-align: center;}
+  </style>
+  <title>Simple Calculator</title>
   <body>
-    <h1>Welcome</h1>
+    <h1>Welcome to The Simple Calculator</h1>
+    <h2><a href="index.html>Back To Home</a></h2>
+    <h3>This Calculator can only Add and Subtract</h3>
   </body>
 </html>
