--- a/Calculator.html
+++ b/Calculator.html
@@ -9,7 +9,7 @@
   </style>
   <title>Simple Calculator</title>
   <body>
-    <h1>Welcome to The Simple Calculator</h1>
+    <h1>Welcome To The Simple Calculator</h1>
     <h2><a href="index.html>Back To Home</a></h2>
     <h3>This Calculator can only Add and Subtract</h3>
   </body>
