--- a/Image.html
+++ b/Image.html
@@ -9,6 +9,6 @@
   <title>Favorite Games</title>
   <body>
     <h1>My Favorite Games Of All Time</h1>
-    <h2><a href= "index.html">Back to Main Page</a>
+    <h2><a href= "index.html">Back to Main Page</a></h2>
   </body>
 </html>
