--- a/Game.html
+++ b/Game.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 
 <html>
+  <style>
+    body {background-color: red;}
+    h1 {color: lightblue; text-align: center;}
+    h2 {color: blue; text-align: left;}
+  </style>
   <body>
-    <h1>Yay Toast!</h1>
+    <h1>Welcome To This Simple Game</h1>
+    <h2><a hre="index.html">Back To Main Page</h2>
   </body>
 </html>
