--- a/Game.html
+++ b/Game.html
@@ -8,6 +8,6 @@
   </style>
   <body>
     <h1>Welcome To This Simple Game</h1>
-    <h2><a hre="index.html">Back To Main Page</h2>
+    <h2><a href="index.html">Back To Main Page</h2>
   </body>
 </html>
