--- a/Game.html
+++ b/Game.html
@@ -2,7 +2,7 @@
 
 <html>
   <style>
-    body {background-color: red;}
+    body {background-color: lightgrey;}
     h1 {color: lightblue; text-align: center;}
     h2 {color: blue; text-align: left;}
   </style>
