--- a/Image.html
+++ b/Image.html
@@ -5,10 +5,13 @@
     body {background-color: black;}
     h1 {color: lightblue; text-align: center;}
     h2 {color: red; text-aligh: left;}
+    h3 (color: lightblue;}
   </style>
   <title>Favorite Games</title>
   <body>
     <h1>My Favorite Games Of All Time</h1>
     <h2><a href= "index.html">Back to Main Page</a></h2>
+    <h3>Shin Megami Tensei 4 + Apocalypse</h3>
+    <img src="SMT.jpg" alt="SMT IV" width="500" height="500">
   </body>
 </html>
