--- a/Image.html
+++ b/Image.html
@@ -5,7 +5,7 @@
     body {background-color: black;}
     h1 {color: lightblue; text-align: center;}
     h2 {color: red; text-align: left;}
-    h3 (color: lightblue;}
+    h3 {color: lightblue;}
   </style>
   <title>Favorite Games</title>
   <body>
