--- a/Image.html
+++ b/Image.html
@@ -13,5 +13,7 @@
     <h2><a href="index.html">Back to Main Page</a></h2>
     <h3>Shin Megami Tensei 4 + Apocalypse</h3>
     <img src="SMT.jpg" alt="SMT IV" width="500" height="500">
+    <h3>Final Fantasy 10</h3>
+    <img src="FFX.jpg" alt="FFX" width="500" height="500">
   </body>
 </html>
