--- a/Image.html
+++ b/Image.html
@@ -16,6 +16,6 @@
     <h3>Final Fantasy 10</h3>
     <img src="FFX.jpg" alt="FFX" width="500" height="500">
     <h3>Halo 3</h3>
-    <img src="H3.jpg" alt="H3" width="500 height="500">
+    <img src="H3.jpg" alt="H3" width="500" height="500">
   </body>
 </html>
