--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 50px; margin: 10px; text-align: center;}
     div.game {float: right; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
-    div.image {background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.image {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
@@ -26,7 +26,5 @@
     <div class="image">
       <a href="Image.html">My Favorite Games</a>
     </div>
-    <p><b>This website is currently a work in progress</b></p>
-    <img src="Workip.png" alt="Work in Progress" width="500" height="500">
   </body>
 </html>
