--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     p {color: red; text-align: left;}
     div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
-    div.game {float: right; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.game {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
     div.image {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
