--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <style>
     body {background-color: blue;}
     h1 {color: white; text-align: center;}
-    h2 {color: white; text-align: center;}
+    h2 {color: white; text-align: left;}
+    h3 {color: white; text-align: center;}
     p {color: red; text-align: left;}
     div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
@@ -16,7 +17,8 @@
   <title>CSE 322 Website</title>
   <body>
     <h1>Welcome to my Website!</h1>
-    <h2>Make a selection</h2>
+    <h2><a href"https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h2>
+    <h3>Make a selection</h3>
     <div class="calc">
       <a href="Calculator.html">A Very Simple Calculator</a>
     </div>
