--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 
 <html>
   <style>
-    body {background-color: blue;}
-    h1 {color: white; text-align: center;}
-    h2 {color: white; text-align: center;}
-    h3 {color: white; text-align: left;}
+    body {background-color: LightGray;}
+    h1 {color: white; background-color: DodgerBlue; text-align: left;}
+    h2, h3 {color: white; text-align: center;}
     p {color: red; text-align: left;}
     div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
@@ -18,7 +17,6 @@
   <body>
     <h1>Welcome to my Website!</h1>
     <h3><a href="https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h3>
-    <h2>Make a selection</h2>
     <div class="calc">
       <a href="Calculator.html">A Very Simple Calculator</a>
     </div>
