--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     body {background-color: LightGray;}
     h1 {color: white; background-color: DodgerBlue; text-align: left;}
     h2, h3 {color: white; text-align: center;}
-    p {color: red; text-align: left;}
     div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
     div.game {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
@@ -15,8 +14,12 @@
   </style>
   <title>CSE 322 Website</title>
   <body>
-    <h1>Welcome to my Website!</h1>
+    <h1>Emmanuel's Website for CSE 322</h1>
     <h3><a href="https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h3>
+    <p style="text-align: center"> 
+      Welcome to my website! Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.
+      please make a selection.
+    </p>
     <div class="calc">
       <a href="Calculator.html">A Very Simple Calculator</a>
     </div>
