--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1>Emmanuel's Website for CSE 322</h1>
     <h3><a href="https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h3>
     <p style="text-align: center"> 
-      Welcome to my website!<b>Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.
-      <b>Please make a selection.
+      Welcome to my website!<br>Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.
+      <br>Please make a selection.
     </p>
     <div class="calc">
       <a href="Calculator.html">A Very Simple Calculator</a>
