--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <br>Please make a selection.
     </p>
     <div class="calc">
-      <a href="Calculator.html">A Very Simple Calculator</a>
+      <a href="Calculator.html"><button>A Very Simple Calculator</a>
     </div>
     <div class="game">
-      <a href= "Game.html">A Very Simple Game</a>
+      <a href= "Game.html"><button>A Very Simple Game</a>
     </div>
     <div class="image">
-      <a href="Image.html">My Favorite Games</a>
+      <a href="Image.html"><button>My Favorite Games</a>
     </div>
   </body>
 </html>
