--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <style>
     body {background-color: LightGray;}
-    h1 {color: white; background-color: DodgerBlue; text-align: left;}
+    h1 {color: white; background-color: Tomato; text-align: left;}
     h2, h3 {color: white; text-align: center;}
     div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
@@ -17,17 +17,18 @@
     <h1>Emmanuel's Website for CSE 322</h1>
     <h3><a href="https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h3>
     <p style="text-align: center"> 
-      Welcome to my website!<br>Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.
-      <br>Please make a selection.
+      Welcome to my website!<br>
+      Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.<br>
+      Please make a selection.
     </p>
     <div class="calc">
-      <a href="Calculator.html"><button>A Very Simple Calculator</a>
+      <a href="Calculator.html"><button>A Very Simple Calculator</button></a>
     </div>
     <div class="game">
-      <a href= "Game.html"><button>A Very Simple Game</a>
+      <a href= "Game.html"><button>A Very Simple Game</button></a>
     </div>
     <div class="image">
-      <a href="Image.html"><button>My Favorite Games</a>
+      <a href="Image.html"><button>My Favorite Games</button></a>
     </div>
   </body>
 </html>
