--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
     body {background-color: LightGray;}
     h1 {color: white; background-color: Tomato; text-align: left;}
-    h2, h3 {color: white; text-align: center;}
+    h3 {color: white; text-align: center;}
     div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 50px; margin: 10px; text-align: center;}
     div.game {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
@@ -16,8 +16,8 @@
   <body>
     <h1>Emmanuel's Website for CSE 322</h1>
     <h3><a href="https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h3>
-    <p style="text-align: center"> 
-      Welcome to my website!<br>
+    <h2 style="color: DodgerBlue; text-align: center;"> Welcome to my website!</h2>
+    <p style="text-align: center;"> 
       Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.<br>
       Please make a selection.
     </p>
