--- a/Image.html
+++ b/Image.html
@@ -3,7 +3,7 @@
 <html>
   <style>
     body {background-color: black;}
-    h1 {color: lightblue; text-align: center;}
+    h1 {color: lightblue; background-color: Tomato; text-align: left;}
     h2 {color: red; text-align: left;}
     h3 {color: lightblue;}
   </style>
