--- a/Image.html
+++ b/Image.html
@@ -2,7 +2,7 @@
 
 <html>
   <style>
-    body {background-color: black;}
+    body {background-color: lightgrey;}
     h1 {color: lightblue; background-color: Tomato; text-align: left;}
     h2 {color: red; text-align: left;}
     h3 {color: lightblue;}
