--- a/Image.html
+++ b/Image.html
@@ -3,9 +3,9 @@
 <html>
   <style>
     body {background-color: lightgrey;}
-    h1 {color: lightblue; background-color: Tomato; text-align: left;}
+    h1 {color: white; background-color: Tomato; text-align: left;}
     h2 {color: red; text-align: left;}
-    h3 {color: lightblue;}
+    h3 {color: DodgerBlue;}
   </style>
   <title>Favorite Games</title>
   <body>
