--- a/Image.html
+++ b/Image.html
@@ -11,8 +11,8 @@
   <body>
     <h1>My Favorite Games Of All Time</h1>
     <h2><a href="index.html">Back to Main Page</a></h2>
-    <h3>Shin Megami Tensei 4 + Apocalypse</h3>
-    <img src="SMT.jpg" alt="SMT IV" width="500" height="500">
+    <h3 style="text-align: right;">Shin Megami Tensei 4 + Apocalypse</h3>
+    <img src="SMT.jpg" alt="SMT IV" align ="right" width="500" height="500">
     <h3>Final Fantasy 10</h3>
     <img src="FFX.jpg" alt="FFX" width="500" height="500">
     <h3>Halo 3</h3>
