--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Emmanuel's Website for CSE 322</h1>
     <h3><a href="https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h3>
     <h2 style="color: DodgerBlue; text-align: center;"> Welcome to my website!</h2>
-    <p style="text-align: center;"> 
+    <p style="text-align: center; border: 5px DogerBlue; border-radius: 12px;"> 
       Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.<br>
       Please make a selection.
     </p>
