--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
       padding: 25px; margin: 5px; text-align: center;}
     div.image {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
-      padding: 50px; margin: 10px; text-align: center;}
+      padding: 25px; margin: 5px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
   <body>
     <h1>Emmanuel's Website for CSE 322</h1>
     <h3><a href="https://github.com/EmmanuelGaldamez/CSE322">My Github</a></h3>
     <h2 style="color: DodgerBlue; text-align: center;"> Welcome to my website!</h2>
-    <p style="text-align: center; border: 5px DogerBlue; border-radius: 12px;"> 
+    <p style="text-align: center; border: 10px solid blue; border-radius: 24px;"> 
       Here on this site you'll find things that I created with HTML, CSS, and a little bit of JavaScript.<br>
       Please make a selection.
     </p>
