--- a/Image.html
+++ b/Image.html
@@ -2,9 +2,9 @@
 
 <html>
   <style>
-    body {background-color: lightgrey;}
+    body {background-color: LightGrey;}
     h1 {color: white; background-color: Tomato; text-align: left;}
-    h2 {color: red; text-align: left;}
+    h2 {color: red; text-align: center;}
     h3 {color: DodgerBlue;}
   </style>
   <title>Favorite Games</title>
@@ -12,7 +12,7 @@
     <h1>My Favorite Games Of All Time</h1>
     <h2><a href="index.html">Back to Main Page</a></h2>
     <h3 style="text-align: right;">Shin Megami Tensei 4 + Apocalypse</h3>
-    <img src="SMT.jpg" alt="SMT IV" align ="right" width="500" height="500">
+    <img src="SMT.jpg" alt="SMT IV" width="500" height="500">
     <h3>Final Fantasy 10</h3>
     <img src="FFX.jpg" alt="FFX" width="500" height="500">
     <h3>Halo 3</h3>
