--- a/Image.html
+++ b/Image.html
@@ -4,18 +4,18 @@
   <style>
     body {background-color: LightGrey;}
     h1 {color: white; background-color: Tomato; text-align: left;}
-    h2 {color: red; text-align: center;}
-    h3 {color: DodgerBlue;}
+    h2 {color: DodgerBlue;}
+    h3 {color: red; text-align: center;}
   </style>
   <title>Favorite Games</title>
   <body>
     <h1>My Favorite Games Of All Time</h1>
-    <h2><a href="index.html">Back to Main Page</a></h2>
-    <h3 style="text-align: right;">Shin Megami Tensei 4 + Apocalypse</h3>
+    <h3><a href="index.html">Back to Main Page</a></h2>
+    <h2>Shin Megami Tensei 4 + Apocalypse</h3>
     <img src="SMT.jpg" alt="SMT IV" width="500" height="500">
-    <h3>Final Fantasy 10</h3>
+    <h2>Final Fantasy 10</h3>
     <img src="FFX.jpg" alt="FFX" width="500" height="500">
-    <h3>Halo 3</h3>
+    <h2>Halo 3</h3>
     <img src="H3.jpg" alt="H3" width="500" height="500">
   </body>
 </html>
