--- a/Image.html
+++ b/Image.html
@@ -11,6 +11,10 @@
   <body>
     <h1>My Favorite Games Of All Time</h1>
     <h3><a href="index.html">Back to Main Page</a></h2>
+    <p style="text-align: center; border: 10px solid blue; border-radius: 15px;">
+      On this page I have a list of my favorite games of all time<br>
+      as said in the title of the page.
+    </p>
     <h2>Shin Megami Tensei 4 + Apocalypse</h3>
     <img src="SMT.jpg" alt="SMT IV" width="500" height="500">
     <h2>Final Fantasy 10</h3>
