--- a/Calculator.html
+++ b/Calculator.html
@@ -2,15 +2,18 @@
 
 <html>
   <style>
-    body {background-color: grey;}
-    h1 {color: lightblue; text-align: center;}
-    h2 {color: blue; text-align: left;}
-    h3 {color: lightblue; text-align: center;}
+    body {background-color: LightGrey;}
+    h1 {color: white; background-color: Tomato; text-align: left;}
+    h3 {color: red; text-align: center;}
   </style>
   <title>Simple Calculator</title>
   <body>
     <h1>Welcome To The Simple Calculator</h1>
-    <h2><a href="index.html">Back To Main Page</a></h2>
-    <h3>This Calculator can only Add and Subtract</h3>
+    <h3><a href="index.html">Back To Main Page</a></h2>
+    <p style="text-align: center; border: 15px solid blue; border-radius: 15px;">
+      This is where I would put a simple calculator, made with JavaScript.<br>
+      Unfortunatly I never got around to doing it. <img src="Sad.jpg" alt=":(" align="middle"><br>
+      Maybe some time in the future.
+    </p>
   </body>
 </html>
