--- a/Calculator.html
+++ b/Calculator.html
@@ -15,5 +15,8 @@
       Unfortunatly I never got around to doing it. <img src="Sad.jpg" alt=":(" align="middle" width="25" height="25"><br>
       Maybe some time in the future.
     </p>
+    <div style="background-color: LightGrey; width 500px; border 15px solid blue;
+      padding: 100px; margin: 25px;>
+    </div>
   </body>
 </html>
