--- a/Calculator.html
+++ b/Calculator.html
@@ -5,6 +5,7 @@
     body {background-color: LightGrey;}
     h1 {color: white; background-color: Tomato; text-align: left;}
     h3 {color: red; text-align: center;}
+    div.calc
   </style>
   <title>Simple Calculator</title>
   <body>
@@ -16,7 +17,8 @@
       Maybe some time in the future.
     </p>
     <div style="background-color: LightGrey; width 500px; border 15px solid blue;
-      padding: 100px; margin: 25px;>
+      padding: 100px; margin: 25px; text-align: center;">
+        Calculator goes here.
     </div>
   </body>
 </html>
