--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     body {background-color: LightGray;}
     h1 {color: white; background-color: Tomato; text-align: left;}
     h3 {color: white; text-align: center;}
-    div.calc {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.calc {float: left; background-color: Tomato; width: 150px; border: 15px solid red; 
       padding: 25px; margin: 5px; text-align: center;}
-    div.image {float: left; background-color: lightgrey; width: 300px; border: 15px solid red; 
+    div.image {float: left; background-color: Tomato; width: 150px; border: 15px solid red; 
       padding: 25px; margin: 5px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
