--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="image">
       <a href="Image.html"><button>My Favorite Games</button></a>
     </div>
-    <p style="text-color: SlateBlue; letter-spacing: 5px; font-size: 30px; text-align: center;">
+    <p></p>
+    <p style="color: SlateBlue; letter-spacing: 5px; font-size: 20px; text-align: center;">
       Something else I would've liked to add in the future, if I ever come back to this project, is a very simple game made in JavaScript.
       If I wasn't so busy with my other classes, I would've done it.
     </p>
