--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     h3 {color: white; text-align: center;}
     div.calc {float: left; background-color: Tomato; width: 300px; border: 15px solid red; 
       padding: 25px; margin: 5px; text-align: center;}
-    div.image {float: left; background-color: Tomato; width: 300px; border: 15px solid red; 
+    div.image {float: right; background-color: Tomato; width: 300px; border: 15px solid red; 
       padding: 25px; margin: 5px; text-align: center;}
   </style>
   <title>CSE 322 Website</title>
