--- a/Calculator.html
+++ b/Calculator.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Welcome To The Simple Calculator</h1>
     <h3><a href="index.html">Back To Main Page</a></h2>
-    <p style="text-align: center; border: 15px solid blue; border-radius: 15px;">
+    <p style="text-align: center; font-size: 20px; border: 15px solid blue; border-radius: 15px;">
       This is where I would put a simple calculator, made with JavaScript.<br>
       Unfortunatly I never got around to doing it. <img src="Sad.jpg" alt=":(" align="middle" width="25" height="25"><br>
       Maybe some time in the future.
