--- a/Image.html
+++ b/Image.html
@@ -11,7 +11,7 @@
   <body>
     <h1>My Favorite Games Of All Time</h1>
     <h3><a href="index.html">Back to Main Page</a></h2>
-    <p style="text-align: center; border: 10px solid blue; border-radius: 15px;">
+    <p style="text-align: center; font-size: 20px; border: 10px solid blue; border-radius: 15px;">
       On this page I have a list of my favorite games of all time<br>
       as said in the title of the page.
     </p>
