--- a/Image.html
+++ b/Image.html
@@ -21,5 +21,7 @@
     <img src="FFX.jpg" alt="FFX" width="500" height="500">
     <h2>Halo 3</h3>
     <img src="H3.jpg" alt="H3" width="500" height="500">
+    <h2>Pokemon Platinum</h2>
+    <img src="PP.jpg" alt="PP" width"500" height="500">
   </body>
 </html>
