--- a/Image.html
+++ b/Image.html
@@ -22,6 +22,11 @@
     <h2>Halo 3</h3>
     <img src="H3.jpg" alt="H3" width="500" height="500">
     <h2>Pokemon Platinum</h2>
-    <img src="PP.jpg" alt="PP" width"500" height="500">
+    <img src="PP.jpg" alt="PP" width="500" height="500">
+    <h2>Shadow The Hedgehog</h2>
+    <img src="SH.jpg" alt="SH" widht="500" height="500">
+    <p style="text-align: center; font-size: 20px; color: StaleBlue; letter-spacing: 5px;>
+      I have many other games that I love, but these are just some I would put in a top list.
+    </p>
   </body>
 </html>
