--- a/Image.html
+++ b/Image.html
@@ -25,7 +25,7 @@
     <img src="PP.jpg" alt="PP" width="500" height="500">
     <h2>Shadow The Hedgehog</h2>
     <img src="SH.jpg" alt="SH" widht="500" height="500">
-    <p style="text-align: center; font-size: 20px; color: StaleBlue; letter-spacing: 5px;>
+    <p style="text-align: center; font-size: 20px; color: StaleBlue; letter-spacing: 5px;">
       I have many other games that I love, but these are just some I would put in a top list.
     </p>
   </body>
