--- a/Calculator.html
+++ b/Calculator.html
@@ -17,14 +17,7 @@
     </p>
     <div style="background-color: LightGrey; width: 500px; border: 15px solid green;
       padding: 500px; margin: 25px; text-align: center;">
-        Calculator goes here.
+      <button>7</button> <button>8</button> <button>9</button>
     </div>
-    <script>
-      var a, b, c;
-      a = 2;
-      b = 2;
-      c = a + b;
-      document.getElementByTagName("div").innerHTML = c;
-    </script>
   </body>
 </html>
