--- a/Calculator.html
+++ b/Calculator.html
@@ -5,6 +5,7 @@
     body {background-color: LightGrey;}
     h1 {color: white; background-color: Tomato; text-align: left;}
     h3 {color: red; text-align: center;}
+    button {font-size: 20px;}
   </style>
   <title>Simple Calculator</title>
   <body>
@@ -16,7 +17,7 @@
       Maybe some time in the future.
     </p>
     <div style="background-color: LightGrey; width: 500px; border: 15px solid green;
-      padding: 500px; margin: 25px; text-align: center;">
+      padding: 500px; margin: 25px;">
       <button>7</button> <button>8</button> <button>9</button>
     </div>
   </body>
