--- a/Calculator.html
+++ b/Calculator.html
@@ -18,7 +18,9 @@
     </p>
     <div style="background-color: LightGrey; width: 500px; border: 15px solid green;
       padding: 500px; margin: 25px;">
-      <button>7</button> <button>8</button> <button>9</button>
+      <button>7</button> <button>8</button> <button>9</button><br>
+      <button>4</button> <button>5</button> <button>6</button><br>
+      <button>1</button> <button>2</button> <button>3</button><br>
     </div>
   </body>
 </html>
