--- a/Calculator.html
+++ b/Calculator.html
@@ -5,7 +5,7 @@
     body {background-color: LightGrey;}
     h1 {color: white; background-color: Tomato; text-align: left;}
     h3 {color: red; text-align: center;}
-    button {font-size: 20px;}
+    button {font-size: 50px;}
   </style>
   <title>Simple Calculator</title>
   <body>
@@ -17,11 +17,11 @@
       Maybe some time in the future.
     </p>
     <div style="background-color: LightGrey; width: 500px; border: 15px solid green;
-      padding: 25px; margin: 25px;">
-      <button>7</button> <button>8</button> <button>9</button><br>
-      <button>4</button> <button>5</button> <button>6</button><br>
+      padding: 100px; margin: 25px;">
+      <button>7</button> <button>8</button> <button>9</button> <button>+</button><br>
+      <button>4</button> <button>5</button> <button>6</button> <button>-</button><br>
       <button>1</button> <button>2</button> <button>3</button><br>
-      <button>+</button> <button>-</button> <button>Enter</button>
+      <button>Enter</button>
     </div>
   </body>
 </html>
